@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_040917_1 - Improved formatting and new enum type for setting log level (fixes #44 and #45).
+
 saw_031517_3 - Merge pyproject for new doc theme.
 
 saw_031517_2 - Fixing docstrings.
